# api_schemas_with_bazel

./: .clang-format  BUILD.bazel  README.md  WORKSPACE  angular.tsconfig.json  bazel-run.sh  package.json  tsconfig.json
app/: BUILD.bazel  app.component.ts  app.module.ts  car.service.ts  observable-service-method.ts
backend/: BUILD
backend/src/: CarService.java  CarsServlet.java  RpcController.java
backend/webapp/: index.html
backend/webapp/WEB-INF/: web.xml
schema/: car.proto
tools/: bazel.rc
